# python-tracking-gold

./: README.md  main.py  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: stocks.py
docs/: reference.md
src/repositories/: alpha_vantage.py
