[project]
name = "python-tracking-gold"
version = "0.1.0"
description = ""
authors = [
    {name = "Edoardo Tavecchio",email = "edoardotavecchio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fastapi[standard] (>=0.119.1,<0.120.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
pacakge-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
